--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 p {
   font-size: 1em;
-  line-height: 2em;
+  line-height: 1em;
 }
 
 #liste {
@@ -18,9 +18,11 @@ p {
 }
 
 .menu {
-  padding: 10px;
+  padding: 10px 0px 10px 20px;
   margin-bottom: 20px;
   background-color: #c5c5c5;
+  border: 1px solid black;
+  box-shadow: 2px 2px 5px;
 }
 
 .red {
@@ -35,13 +37,14 @@ p {
 header {
   display: flex;
   justify-content: center;
-  padding: 5px 0px 30px 0px;
+  padding: 10px 0px 10px 0px;
   background-color: #9c9c9c;
+
   margin-bottom: 30px;
 }
 
 button {
-  padding: 1.35em 2.2em;
+  padding: 0.6em 2.2em;
   border: 0.2em solid white;
   text-decoration: none;
   font-weight: 400;
@@ -49,6 +52,7 @@ button {
   transition: all 0.2s;
   background-color: white;
   margin: 0px 10px;
+  border-radius: 2px;
 }
 
 button:hover {
@@ -95,4 +99,12 @@ button:hover {
   padding: 0.8em 1em;
   font-family: helvetica, "sans serif";
   font-size: 1em;
+}
+
+p {
+  font-family: sans-serif;
+}
+
+.fullname {
+  font-size: 20px;
 }
